objects/ABC_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Over_aging_Maximum_days__c</fullName>
        <defaultValue>45</defaultValue>
        <label>Over aging – Maximum days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_aging_Warning_days_2__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Over aging – Warning days 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_aging_Warning_days_3__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Over aging – Warning days 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_aging_Warning_days__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Over aging – Warning days 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_balance_Countdown_days__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Over balance – Countdown days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_balance_Warning_threshold_1__c</fullName>
        <defaultValue>0.60</defaultValue>
        <label>Over balance – Warning threshold 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Over_balance_Warning_threshold_2__c</fullName>
        <defaultValue>0.80</defaultValue>
        <label>Over balance – Warning threshold 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Over_balance_Warning_threshold_3__c</fullName>
        <defaultValue>0.90</defaultValue>
        <label>Over balance – Warning threshold 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Provider_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider Profile</label>
        <referenceTo>Provider_Profile__c</referenceTo>
        <relationshipLabel>ABC Profiles</relationshipLabel>
        <relationshipName>ABC_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ABC Profile</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABC Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>